[tool.poetry]
name = "pretty-logger"
version = "0.1.0"
description = ""
authors = ["Matthieu Liger <matthieu.liger@gmail.com>"]
readme = "README.md"
packages = [{include = "pretty_logger", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
dot2tex = "^2.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Enable checking inside functions that have no type annotations
check_untyped_defs = true
exclude = [
    "archive",
    "tests/helpers/",
    "legacy_code/",
    "reference_data/",
    "documents/",
    "logs/",
]
mypy_path = "typings"