[tool.poetry]
name = "pretty-logger"
version = "0.1.0"
description = ""
authors = ["Matthieu Liger <matthieu.liger@gmail.com>"]
readme = "README.md"
packages = [{ include = "pretty_logger", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
coloredlogs = "^15.0.1"
mypy = "^1.16.1"


[tool.poetry.group.dev.dependencies]
dot2tex = "^2.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.include]]
path = "src/pretty_logger/*.pyi"

[[tool.poetry.include]]
path = "src/pretty_logger/py.typed"
